update: changes on the blog post on digital stoicism.

--- a/content/blog/digital-stoicism.mdx
+++ b/content/blog/digital-stoicism.mdx
@@ -4,17 +4,23 @@ date: "2026-02-16"
 excerpt: "AI might be shifting the economic landscape, but it hasn't changed the fact that we are social creatures. In this post, I explore the importance of adopting a stoic mindset toward tech developments and why human connection remains our greatest asset."
 ---
 
-If you’re even remotely interested in current AI developments or if you work in the field, you know the discourse around AI is currently drowning in hype, drama, and buzzwords.
+If you’re even remotely interested in current AI developments or work in the field, you know the discourse is currently drowning in hype, drama, and buzzwords. Every update is "the next big thing," every model release is *the one* that changes everything, and apparently, we’re all losing our jobs tomorrow. 
+Beneath it all, there’s this heavy, doomsday-like undertone lingering over every headline. It’s exhausting. 
+I’ve personally noticed how easy it is to get dragged down that negative spiral—losing hope while simultaneously feeling an intense pressure to "seize the opportunity" and make the most of this chaotic era.
 
-Every update is "the next big thing," every model release is "THE ONE" that changes everything, and apparently, we’re all losing our jobs tomorrow. Beneath it all, there’s this heavy, doomsday-like undertone lingering over every headline. It’s exhausting. I’ve personally noticed how easy it is to get dragged down that negative spiral, losing hope while simultaneously feeling an intense pressure to "seize the opportunity" and make the most of this chaotic era.
+Lately (and maybe it’s just a momentary observation, after I "touched some grass"), I’ve realized that the constant drama isn't the whole truth. While it’s undeniable that AI will spark a massive shift in work, society, and economics, that doesn't mean we should get lost in the noise. It’s more important than ever to take a step back, breathe, and focus on reality.
+The reality isn't quite as cinematic as people make it out to be. AI certainly has its use cases and will create a lot of change, but it still needs a lot of work around it to function properly and create actual value. It requires oversight, testing, and bug-fixing to be truly helpful. 
 
-Lately (and maybe it’s just the weekend talking, or the fact that I actually "touched grass" for once), I’ve realized that the constant drama isn't the whole truth. While it’s undeniable that AI will spark a massive shift in work, society, and economics, that doesn't mean we should get lost in the noise. It’s more important than ever to take a step back, breathe, and focus on reality.
+Note: Not everyone has a personal AI assistant; frankly, not everyone *needs* one. (Fun fact: I set one up for myself and found it pretty useless for anything personal). 
 
-The reality isn't quite as cinematic as people make it out to be. AI certainly has its use cases and will create a lot of change, but it still needs a lot of work around it in order to function properly and create actual value. It requires a lot of oversight, testing, and bug-fixing to be truly helpful. As an example: Not everyone has a personal AI assistant; frankly, not everyone NEEDS one. (Fun fact: I set one up for myself and found it utterly useless). Current advances are fascinating and have serious implications, but they aren't worth losing sleep over.
+Current advances are fascinating and have serious implications, but they aren't worth losing sleep over.
 
-The talk about new economic model where agents have new payment methods, self-reinforcing AI, or even companies that are entirely run by AI, all sound very dramatic and for sure represent a huge shift. But it’s also important to remember that we are not there yet. Even if this becomes true one day, you will still be able to buy your sandwich (why is there no English word for “belegtes Brötchen”?) at the local bakery from the kind Bäckereifachverkäufer*in. The world won’t change overnight and humanity will find some way to adapt to the new realities — eventually.
+The talk about new economic models where agents have new payment methods, self-reinforcing AI, or even companies that are entirely run by AI... it all sounds very dramatic and for sure represents a huge shift. But it’s also important to remember that we are not there _yet_. Even if this becomes true one day, you will still be able to buy your sandwich (why is there no English word for “belegtes Brötchen”?) at the local bakery from the kind _Bäckereifachverkäufer\*in_. The world won’t change overnight and humanity will find some way to adapt to the new realities — eventually.
 
-Adopting a stoic approach is the way to go. Focus on what you can control and accept what you can’t. It’s fun to explore new developments, test out coding agents, or play with the latest video models. But at the end of the day, what matters is the quality of the work produced and the value it holds. Letting an agent churn out valueless "slop" all night doesn't help anyone.
+Adopting a stoic approach is the way to go: Focus on what you can control and accept what you can’t. 
+It’s fun to explore new developments, test out coding agents, or play with the latest video models. But at the end of the day, what matters is the quality of the work produced and the value it holds. Letting an agent churn out valueless "slop" all night doesn't help anyone.
 
 Ultimately, humans still value human interaction. We are social creatures by design; that won’t change anytime soon, and we cannot forget that.
-That’s a lot of yapping just to say: Go touch grass, hug your friends, and enjoy some good food. Have a great day! ( ˘ ³˘)ノ°ﾟº❍。
+That’s a lot of yapping just to say: Go touch grass, hug your friends, and enjoy some good food.
+
+( ˘ ³˘)ノ°ﾟº❍。
