update: Blog entry

--- a/content/blog/digital-stoicism.mdx
+++ b/content/blog/digital-stoicism.mdx
@@ -11,7 +11,7 @@ I’ve personally noticed how easy it is to get dragged down that negative spira
 Lately (and maybe it’s just a momentary observation, after I "touched some grass"), I’ve realized that the constant drama isn't the whole truth. While it’s undeniable that AI will spark a massive shift in work, society, and economics, that doesn't mean we should get lost in the noise. It’s more important than ever to take a step back, breathe, and focus on reality.
 The reality isn't quite as cinematic as people make it out to be. AI certainly has its use cases and will create a lot of change, but it still needs a lot of work around it to function properly and create actual value. It requires oversight, testing, and bug-fixing to be truly helpful. 
 
-Note: Not everyone has a personal AI assistant; frankly, not everyone *needs* one. (Fun fact: I set one up for myself and found it pretty useless for anything personal). 
+Note: Not everyone has a personal AI assistant; frankly, not everyone *needs* one.
 
 Current advances are fascinating and have serious implications, but they aren't worth losing sleep over.
 
